--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@xyflow/react": "^12.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
